[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "fps_kernel_env"
version = "0.1.0"
description = "An FPS plugin for building kernel environment"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyverse-api >=0.12.0,<0.13.0",
]
license-files = ["LICENSE"]

[[project.authors]]
name = "Trung Le"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points]
"fps.modules" = {kernel_env = "fps_kernel_env.main:KernelEnvModule"}
"jupyverse.modules" = {kernel_env = "fps_kernel_env.main:KernelEnvModule"}
